fix : delete gender
