# apps/docs/api-reference/openapi.json
@@ -1458,11 +1458,6 @@
                 "level": { "type": "number", "example": 6 },
                 "pulse": { "type": "number", "example": 203 },
                 "presence": { "type": "number", "example": 6 },
-                "gender": {
-                  "type": "string",
-                  "nullable": true,
-                  "example": "MALE"
-                },
                 "source": { "type": "string", "example": "SLACK" },
                 "logs": {
                   "type": "array",
@@ -1633,11 +1628,6 @@
               "level": { "type": "number", "example": 6 },
               "pulse": { "type": "number", "example": 203 },
               "presence": { "type": "number", "example": 6 },
-              "gender": {
-                "type": "string",
-                "nullable": true,
-                "example": "MALE"
-              },
               "source": { "type": "string", "example": "SLACK" },
               "logs": {
                 "type": "array",
